[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.6.1"
dirs = "5.0.1"
futures = "0.3.30"
hex = "0.4.3"
os-version = "0.2.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.120" }
sha1 = "0.10.6"
tokio = { version = "1.38.1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
    "process",
] }
tokio-stream = "0.1.15"
zip = "2.1.5"
chrono = { version = "0.4.38", features = ["serde"] }
fern = "0.6.2"
oauth2 = "4.4.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
image = "0.25.2"
serde_with = { version = "3.9.0", features = ["chrono"] }
rand = "0.8.5"
regex = "1.10.5"
async-recursion = "1.1.1"
ferinth = "2.11.0"
semver = "1.0.23"
once_cell = "1.19.0"
furse = "1.5.15"
derive_more = "0.99.18"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["desktop"] }
dioxus-logger = { version = "0.5.0"}
thiserror = "1.0.63"
ordermap = "0.5.0"
snafu = "0.8.4"
pausable_future = "0.2.0"
